[tool.poetry]
name = "project2-mezhuev-m25-555"
version = "0.2.0"
description = ""
authors = ["Pavel Mezhuev <mp710@ya.ru>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
