[tool.poetry]
name = "project2-mezhuev-m25-555"
version = "0.4.0"
description = ""
authors = ["Pavel Mezhuev <mp710@ya.ru>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"
prettytable = "^3.16.0"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"
database = "src.primitive_db.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.1"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
